<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">tdreeb</string>
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection was lost!</string>
    <string name="app_market_link">app_market_link</string>
    <string name="app_google_play_store_link">app_google_play_store_link</string>
    <string name="no_internet">No internet connection</string>
    <string name="retry">Try Again</string>
    <string name="home">Home</string>
    <string name="my_session">My Session</string>
    <string name="chat">Chat</string>
    <string name="notification">Notification</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_type">Login Type</string>
    <string name="login_title">Login</string>
    <string name="star">*</string>
    <string name="phone_title">Phone</string>
    <string name="submit_btn_title">Submit</string>
    <string name="or">or</string>
    <string name="register">New user?Register</string>
    <string name="guardian_reg_title">Guardian Registration</string>
    <string name="trainer_reg_title">Trainer Registration</string>
    <string name="trainee_reg_title">Trainee Registration</string>
    <string name="f_n_title">First Name</string>
    <string name="l_n_title">Last Name</string>
    <string name="pass_title">Password</string>
    <string name="conf_pass_title">Confirm Password</string>
    <string name="gender_title">Gender</string>
    <string name="register_title">Register</string>
    <string name="registration_tersm_condition">By clicking the button you agree to our terms and conditions of services and privacy policy</string>
    <string name="login_message_btn">Have an account? Login</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="mobile_edit_text_hint">Enter Mobile Number</string>
    <string name="next">Next</string>
    <string name="get_start">Get Started</string>
    <string name="skip">Skip</string>
    <string name="splash_title_1">Control Personal trainers all over world</string>
    <string name="splash_subtitle_1">Morbi et dictum ante, vel hendrerit dolor.Maecenas tincidunt, velit sit amet pharetra laoreet, nisl orci tempor</string>
    <string name="verification_title">Verification Code</string>
    <string name="verification_message">Please type the verification code send to the</string>
    <string name="verify_btn_title">Verify</string>
    <string name="otp_msg">Didn\'t Receive OTP?</string>
    <string name="resend_title"><u>RESEND</u></string>
    <string name="homme_bottom_nav_title">Home</string>
    <string name="schedule_bottom_nav_title">Schedule</string>
    <string name="chat_bottom_nav_title">Message</string>
    <string name="chat_bottom_title">Chat</string>
    <string name="notification_bottom_nav_title">Notification</string>
    <string name="my_session_title">My\nSessions</string>
    <string name="guardian_manage_schedule_title">Manage\nSchedule</string>
    <string name="guardian_all_request_title">All\nRequest</string>
    <string name="guardian_my_course_title">My\nCourses</string>
    <string name="guardian_live_course_title">Live\nCourse</string>
    <string name="guardian_video_course_title">Video\nCourse</string>
    <string name="guardian_chats_title">Chats</string>
    <string name="guardian_my_resources_title">My\nResources</string>
    <string name="guardian_my_payments_title">My\nPayments</string>
    <string name="guardian_upcoming_session_title">Upcoming\nSession</string>
    <string name="guardian_upcoming_session_title_without_new_line">Upcoming Session</string>
    <string name="view_all_title">View All</string>
    <string name="message_title_in_chat">All Messages</string>
    <string name="chat_with_admin_in_chat">Chat with Admin</string>
    <string name="search_in_chat">Search</string>
    <string name="notification_title">Notification</string>
    <string name="trainer_my_session_title">All Session</string>
    <string name="chat_title_upcoming">Chat</string>
    <string name="all_request_title">All Request</string>
    <string name="accept_title">Accept</string>
    <string name="cancel_title">Cancel</string>
    <string name="view_title">View</string>
    <string name="profile_title">Profile</string>
    <string name="personal_info_title">Personal Info</string>
    <string name="browse_photo_title">Browse Photo</string>
    <string name="change_image_title">Change Image</string>
    <string name="profile_f_n_title">Enter First Name</string>
    <string name="profile_l_n_title">Enter Last Name</string>
    <string name="profile_dob_title">Date of Birth</string>
    <string name="profile_dob_hint_title">Select your Date of Birth</string>
    <string name="profile_travel_to_another_title">Travel to Another Area</string>
    <string name="profile_nationality_title">Nationality <font fgcolor='#FF2727'>*</font></string>
    <string name="profile_nationality_hint_title">Select your Nationality</string>
    <string name="profile_language_title">Which language do you speak?</string>
    <string name="profile_language_hint_title">Select Language</string>
    <string name="profile_change_location_title">Change location</string>
    <string name="profile_change_location_hint_title">Click here to Enter your location</string>
    <string name="profile_subscription_title">Subscription</string>
    <string name="profile_view_plan_title">View Plan</string>
    <string name="profile_free_title">Free</string>
    <string name="profile_free_data_size_title">1 GB</string>
    <string name="profile_free_data_size_duration_title">Life Time</string>
    <string name="profile_free_data_started_title">Started</string>
    <string name="profile_free_data_expires_title">Expires</string>
    <string name="profile_free_data_remaining_title">Remaining</string>
    <string name="profile_save_btn_title">Save &amp; Continue</string>
    <string name="trainer_my_courses_title">My Subjects</string>
    <string name="trainer_my_subject_title">My Subject</string>
    <string name="trainer_add_new_subject_title">Add New Subject</string>
    <string name="trainer_aed_title">AED</string>
    <string name="trainer_live_courses_title">Live Courses</string>
    <string name="trainer_live_courses_heading">My Live Courses</string>
    <string name="trainer_add_live_btn_title">Add Live</string>
    <string name="add_live_course">Add Live Course</string>
    <string name="trainer_subjects_title">Subjects</string>
    <string name="trainer_zoom_title">In Zoom</string>
    <string name="trainer_video_courses_toolbar_title">Video Course</string>
    <string name="trainer_video_courses_heading">My Video Courses</string>
    <string name="trainer_add_video_btn_title">Add Video Course</string>
    <string name="trainer_my_resources_title">My Resources</string>
    <string name="trainer_my_resources_heading">My Resources</string>
    <string name="resources">Resources</string>
    <string name="trainer_upload_resources_btn_title">Upload Resources</string>
    <string name="trainer_my_payment_toolbar_title">Subscription</string>
    <string name="trainer_my_payment_data_remaining_title">Remaining</string>
    <string name="trainer_my_payment_data_total_title">Total</string>
    <string name="trainer_my_payment_current_plan_title">Current Active Plan</string>
    <string name="trainer_my_payment_select_plan_title">Select your Plan</string>
    <string name="trainer_my_schedule_toolbar_title">Manage Schedule</string>
    <string name="trainer_my_schedule_header_title">My Available Direct Schedule</string>
    <string name="trainer_my_schedule_avoiding_direct_training_title">Available for Direct training</string>
    <string name="trainer_my_schedule_from_title">From</string>
    <string name="trainer_my_schedule_to_title">To</string>
    <string name="trainer_my_schedule_start_date">Start Date</string>
    <string name="trainer_my_schedule_end_date">End Date</string>
    <string name="trainer_my_schedule_start_end_date">select your start and end date for training</string>
    <string name="trainer_my_schedule_days">Days</string>
    <string name="trainer_my_schedule_time">Time</string>
    <string name="trainer_my_schedule_sunday">Sunday</string>
    <string name="trainer_my_schedule_monday">Monday</string>
    <string name="trainer_my_schedule_tuesday">Tuesday</string>
    <string name="trainer_my_schedule_wednesday">Wednesday</string>
    <string name="trainer_my_schedule_thursday">Thursday</string>
    <string name="trainer_my_schedule_friday">Friday</string>
    <string name="trainer_my_schedule_saturday">Saturday</string>
    <string name="trainer_my_schedule_group_session_title">Available for group session</string>
    <string name="trainer_my_schedule_online_schedule_title">My Available online schedule</string>
    <string name="trainer_my_schedule_online_training_title">Available for Online Training</string>
    <string name="trainer_session_details_toolbar_title">Session Details</string>
    <string name="trainer_session_details_reach_at_title">Reach at</string>
    <string name="trainer_session_details_distance_title">Distance</string>
    <string name="trainer_session_details_session_time_title">Session Time</string>
    <string name="trainer_session_details_started_location_title">Started from the Location</string>
    <string name="trainer_session_details_estimate_time_title">Enter Estimated Time</string>
    <string name="trainer_session_details_estimate_time_title_with_value"><![CDATA[ <p>Estimated arrival time of Trainer is %1$s hour %2$s minutes</p> ]]></string>
    <string name="trainer_session_details_hour_title">hour</string>
    <string name="trainer_session_details_min_title">min</string>
    <string name="trainer_session_reached_title">Click if Reached</string>
    <string name="trainer_session_completed_title">Session Completed</string>
    <string name="trainer_session_start_title">Start</string>
    <string name="trainer_session_yes_title">Yes</string>
    <string name="trainer_session_btn_view_map">View in Map</string>
    <string name="trainer_session_btn_msg_title">Message</string>
    <string name="trainer_session_details_online_toolbar_title">Online Session Details</string>
    <string name="trainer_session_details_online_edit_btn_title">Edit</string>
    <string name="trainer_session_details_online_title">Online</string>
    <string name="trainer_session_details_login_zoom_title">Join Class in Zoom</string>
    <string name="trainer_session_details_login_zoom_link_title">Zoom Link</string>
    <string name="trainer_session_details_login_share_title">Share</string>
    <string name="trainer_session_details_login_copy_title">Copy</string>
    <string name="upcoming">Upcoming</string>
    <string name="completed">Completed</string>
    <string name="paste_zoom_link">Paste Zoom Link*</string>
    <string name="select_curriculum">Select Curriculum</string>
    <string name="select_grade">Select Grade</string>
    <string name="thank_you">Thank You</string>
    <string name="you_have_successfully_booked">You have Successfully booked</string>
    <string name="invoice_number">Invoice Number:\n <b><font size='18'>%1$s</font></b></string>
    <string name="back_to_home_page">Back to Home Page</string>
    <string name="contact_us">Contact Us</string>
    <string name="call_us">Call Us</string>
    <string name="enter_subject_details">Enter Subject Details</string>
    <string name="select_subject">Select Subject</string>
    <string name="enter_ammount_per_hour">Enter Ammount / hour</string>
    <string name="done">Done</string>
    <string name="select_sub_subject" tools:ignore="MissingTranslation">Select Sub Subject</string>
</resources>