<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeParentFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/mySessionParentFragment3"
        android:icon="@drawable/ic_my_session"
        android:title="@string/my_session" />
    <item
        android:id="@+id/trainerChatFragment"
        android:icon="@drawable/ic_chat"
        android:title="@string/chat" />
    <item
        android:id="@+id/myResourceFragment"
        android:icon="@drawable/my_resources"
        android:title="@string/resources" />

    <item
        android:id="@+id/trainerNotificationFragment"
        android:icon="@drawable/ic_bell"
        android:title="@string/notification" />
</menu>