<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activites.otp.OtpActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.ryx.tdreeb.ui.activites.otp.OtpViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_40sdp"
            android:scaleType="fitXY"
            android:src="@drawable/login1" />

        <TextView
            android:id="@+id/tv_verification_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/verification_title"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tv_verification_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/verification_message"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp" />


        <com.alimuzaffar.lib.pin.PinEntryEditText
            android:id="@+id/txt_pin_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:cursorVisible="false"
            android:digits="1234567890"
            android:inputType="number"
            android:maxLength="4"
            android:textIsSelectable="false"
            android:textSize="@dimen/_20ssp"
            app:pinLineColors="@color/white"
            app:pinLineStroke="@dimen/_1sdp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/verify_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginLeft="@dimen/_34sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_34sdp"
            android:background="@color/white"
            android:onClick="@{()-> viewModel.onClickBTN()}"
            android:text="@string/verify_btn_title"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/otp_msg"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/tv_resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@string/resend_title"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>

    </LinearLayout>

</layout>