<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.thankyou.ThankYouFragment">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.ryx.tdreeb.ui.fragments.thankyou.ThankYouViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_bg_color">

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:background="@color/app_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_60sdp"
            android:background="@drawable/trainer_chat_layout_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_20sdp"
                    android:background="@drawable/new_request_bg"
                    android:padding="@dimen/_20sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/img_thank_you"
                        android:layout_width="@dimen/_90sdp"
                        android:layout_height="@dimen/_90sdp"
                        android:layout_marginTop="@dimen/_40sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/tick_thank" />

                    <TextView
                        android:id="@+id/tv_thank_u"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:text="@string/thank_you"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_30ssp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/img_thank_you"
                        tools:layout_editor_absoluteY="11dp" />

                    <TextView
                        android:id="@+id/tv_success_mez"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/you_have_successfully_booked"
                        android:textColor="@color/grey"
                        android:textSize="@dimen/_10ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_thank_u" />

                    <TextView
                        android:id="@+id/tv_invoice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:gravity="center"
                        android:text="@string/invoice_number"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_success_mez" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_submit"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_26sdp"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:onClick="@{()-> viewModel.onClickHome()}"
                        android:background="@drawable/btn_blue_dark_round"
                        android:letterSpacing="0.1"
                        android:text="@string/back_to_home_page"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textStyle="normal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_invoice" />

                    <TextView
                        android:id="@+id/tv_contact_us"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="@dimen/_7sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_20sdp"
                        android:text="@string/contact_us"
                        android:textColor="@color/grey"
                        android:textSize="@dimen/_9ssp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btn_submit" />

                    <TextView
                        android:id="@+id/tv_call_us"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginEnd="@dimen/_7sdp"
                        android:layout_marginBottom="@dimen/_20sdp"
                        android:text="@string/call_us"
                        android:textColor="@color/grey"
                        android:textSize="@dimen/_9ssp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btn_submit" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>